@@ -3,7 +3,7 @@ IF(OBD_SIMGEN_LOGGER)
 	FILE(GLOB OBDSIMGEN_LOGGER_SRCS
 		generators/logger/*.c)
 	ADD_LIBRARY(ckobdsim_logger STATIC ${OBDSIMGEN_LOGGER_SRCS})
-	SET(GENERATOR_LIBS ${GENERATOR_LIBS} ckobdsim_logger cksqlite)
+	SET(GENERATOR_LIBS ${GENERATOR_LIBS} ckobdsim_logger ${CKSQLITE_LIBRARIES})
 	ADD_DEFINITIONS(-DOBDSIMGEN_LOGGER)
 ENDIF(OBD_SIMGEN_LOGGER)
 
